--- a/Anecdotario.tex
+++ b/Anecdotario.tex
@@ -51,7 +51,7 @@ Comienzo a darme cuenta que en cada cambio de salón el muchacho guapo está en 
 
 Pasan los días, y comenzamos a platicar, ya sé que se llama Armando Antonio;a mí me parece incómodo: lo siento muy largo. Desde la secundaria todos lo conocen como {\it El Bailarín}.
 
-Después de algunos días, me pide acompañarme a mi casa al terminar las clases, dejando en la esquina. 
+Después de algunos días, me pide acompañarme a mi casa al terminar las clases, dejándome en la esquina. 
 
 Llegan las vacaciones de Semana Santa, mi papá nos lleva a Mazatlán, y yo estoy pensando mucho en aquel muchacho, deseo que terminen las vacaciones para volver a verle. Por casualidad escucho varias veces ``L'amour est bleu'' (acá conocida como ``El amor es triste'') con Paul Muriat. 
 
@@ -122,13 +122,13 @@ Al llegar a la casa, encontró a su tía alarmadísima, y le dijo ---Qué bueno 
 
 Era un caos, la universidad estaba cerrada, y a mi esposo le tocó hacer su examen de admisión en el estadio de Ciudad Universitaria. 
 
-Pocos meses después, cuando se dio cuenta de había sido aceptado, dice él que ya se sintió veterinario. Vino a León y me pidió en matrimonio, pues también a mí me era muy difícil estar lejos de él; pero mi papá puso como plazo un año, que nos pareció interminable.
+Pocos meses después, cuando se dio cuenta de que había sido aceptado, dice él que ya se sintió veterinario. Vino a León y me pidió en matrimonio, pues también a mí me era muy difícil estar lejos de él; pero mi papá puso como plazo un año, que nos pareció interminable.
 
 Por fin estábamos juntos, ocupando el fondo de la planta baja de aquella casa tan grande y antigua. En el piso de arriba vivía su tía; el piso de más arriba, y el resto de la casa, estaban rentados. Muy pronto, con poco dinero y gran esfuerzo, fuimos convirtiendo nuestra residencia en un rinconcito de Guanajuato ( en pleno Distrito Federal).
 
 De la bodega donde se guardaban los tiliches, iban saliendo que un farol, que un reloj de pared o de mesa, etc.
 
-Mi novio trabajaba en la editorial ``Aguilar'', utilizando las horas libres de la universidad; los sábados se iba por el rumbo de Ciudad Satélite, tocando puertas y ofreciendo vacunas o baño para las mascotas, dejando su número telefónico; así fue formando sus primeros clientes.
+Mi Gordo trabajaba en la editorial ``Aguilar'', utilizando las horas libres de la universidad; los sábados se iba por el rumbo de Ciudad Satélite, tocando puertas y ofreciendo vacunas o baño para las mascotas, dejando su número telefónico; así fue formando sus primeros clientes.
 \chapter{Nuestra boda}
 Estoy muy nerviosa, acordamos Tony y yo que hoy viernes 9 de  marzo de 1969, vendría con sus papás y un sacerdote amigo (el padre Herrera), a pedir mi mano: Queremos casarnos en dos o tres meses, para no estarnos extrañando.  Tengo miedo ,no sé como reaccionará mi papá; a mi mamá ya le avisé, y cosa rara, lo tomó con mucha calma, me preguntó qué prepararía yo, y le he dicho que tengo la receta de un pastel de cuadritos de chocolate y vainilla; ya he escuchado que para quedar bien se deben servir alimentos ya experimentados y no correr el riesgo de no tener nada para el momento; yo no soy aficionada a la cocina y no sé ni lo esencial, pero tengo mucha confianza en que saldrá bien; de una vez lo voy a hacer para que no me tomen las prisas...
 
@@ -174,7 +174,7 @@ Mi vestido sigue la moda del momento: Es en línea A, de organza con aplicacione
 
 Mi mayor hermana soltera está decorando mi ramo, y ella lleva la logística de mi boda. También me ha comprado un "babydoll" pequeñito y transparente.
 
-Desde que nos casamos por lo civil Tony y yo hemos disentido varias veces. Él insiste en que yo use su apellido, pues legalmente ya soy su esposa; yo me resisto diciendo que esta otra boda es la importante, a lo que él contesta que solo , me pueda llevar con él. Un día, algo fastidiada por estas discusiones le digo que tiene razón en todo, que solo le pido que informe a mi papá de todo esto que él me dice: Creo que no hemos vuelto a discutir al respecto...
+Desde que nos casamos por lo civil Tony y yo hemos disentido varias veces. Él insiste en que yo use su apellido, pues legalmente ya soy su esposa; yo me resisto diciendo que esta otra boda es la importante, a lo que él contesta que si lo desea , me podría llevar con él. Un día, algo fastidiada por estas discusiones le digo que tiene razón en todo, que solo le pido que informe a mi papá de todo esto que él me dice: Creo que no hemos vuelto a discutir al respecto...
 
 Cada vez que él viene de México, vamos a repartir invitaciones, y yo me siento mucho muy emocionada, conociendo a sus familiares, que pronto serán también los míos; y yo lo llevo con mis familiares, a quienes fácilmente les resulta simpático.
 
@@ -199,12 +199,12 @@ Recuerdo a mi esposo hablando con sus clientes, y luchando contra muchos mitos. 
 
 El les explicaba que era conveniente desparasitar al animal cada determinado tiempo, pero que también había que considerar que la harina del pan la blanqueaban con una sustancia que contenía potasio, y algunos perros eran sensibles a este, y podían presentar convulsiones, pero que no era cierto que el pan y el agua originaran las lombrices.
 
-Otro mito muy frecuente era, y todavía lo es, creer que al perro que come pescado se le cae el pelo. Lo que sí, es que hay que cuidarlo de las espinas.
+Está muy arraigada la creencia de que ``matriz que no da hijos da tumores; es muy frecuente que las personas, llenas de aprehensión, pregunten sobre este tema, el doctor contesta lo mejor posible, tratando de dar tranquilidad. 
 
 También se divulgaba y se divulga la creencia de que los mejores cachorros se obtienen de padres que estén emparentados muy de cerca\ldots¿Y la genética?\ldots
 
 \chapter{Perros Delincuentes}
-Había unos muchachos que iban con frecuencia, y llevaban perros {\it doberman} heridos. Él los atendía,  pero siempre quedaba intrigado, pues los perros siempre llegaban con cortes como de arma blanca; les preguntaba, y ellos contestaban:---``Es que los peleamos por apuesta\ldots---. Siempre traían dinero, y eran generosos, pues le pagaban más de los que el les cobraba.
+Había unos muchachos que iban con frecuencia, y llevaban perros {\it doberman} heridos. Él los atendía, quedaba intrigado, pues los perros siempre llegaban con cortes como de arma blanca; les preguntaba, y ellos contestaban:---``Es que los peleamos por apuesta\ldots---. Generalmente traían dinero, y eran generosos, pues le pagaban más de los que el les cobraba.
 
 Recuerdo muy bien que ya le llamaban ``doctor'', y yo lo oía y sentía muy bonito.
 
