--- a/Anecdotario.tex
+++ b/Anecdotario.tex
@@ -21,7 +21,7 @@ Volviendo al  abuelo, nos contaba mi suegra que él tenía varios animales, entr
 
 Además de la vocación, mi esposo heredó relojes de pared, radios, lámparas etc., ya que estaban abandonados en una bodega, y eran solo cosas viejas que a nadie interesaban; pero cuando nos casamos, mi gordo les dio nueva vida, y como a ambos nos gustan las antigüedades, las conservamos aún, después de 45 años de casados.
 
-\section*{\centering -*-}
+\section*{\centering * * *}
 ¡Bbrrhh! ¡Que frío hace, y no deja de llover ni de día ni de noche. Es enero de 1967, y por fin estoy en la escuela preparatoria de León (``E.P.L.''). Digo por fin, por que se acostumbra en mi familia, que los pasos de las hermanas mayores los sigan las menores.
 
 Estudié la primaria y la secundaria en colegios particulares, siendo muy rígidos, igual que mis papás (Agradezco la vida y todo lo que me han dado), pero me muero por tratar y platicar con muchachos, con naturalidad, sin que esté prohibido. Es por eso que me encuentro muy agitada emocionalmente, y los últimos meses, no he podido casi dormir, por estar esperando esta nueva libertad. Pero me cuido mucho de esconder lo qwe siento, no vaya a ser que a mis papás les parezca peligroso, y no me permitan estudiar en esta escuela.
