--- a/Anecdotario.tex
+++ b/Anecdotario.tex
@@ -455,7 +455,7 @@ Otro día, mi Gordo llegó con un \textit{kinkajú}, o \textit{martucha}, muy ma
 
 Lo traía siempre en el hombro, y el animalito subía y bajaba con toda confianza. Cuando ya se habían acostumbrado uno al otro, un día de pronto, al llevarlo a su lado con su cadena, sin previo aviso ni motivo aparente alguno, el volteó con una mirada llena de hostilidad, y comenzó a escalar la pierna izquierda, hasta hincar los colmillos en el borde inferior izquierdo de la cara, mientras usaba ambas zarpas para dejar en mal estado todo el costado izquierdo de la cara de mi hijo. El muchacho lloró de susto y desilusión; lastimado y ofendido, ya no le hizo caso al animal, y días después, había desaparecido.
 
-A la semana siguiente, llegó un joven con el \textit{kinkajú}, quejándose de que le había roto las vestiduras del coche. Al ser interrogado sobre la forma en que lo había obtenido, contestó que vivía en el edificio de la esquina, y que una noche había entrado por la ventana a su habitación; y como era mansito, no indagó de donde era. Hasta que lo perjudicó. Entonces sí supo a donde ir\ldots
+A la semana siguiente, llegó un joven con el \textit{kinkajú}, quejándose de que le había roto las vestiduras del coche. Al ser interrogado sobre la forma en que lo había obtenido, contestó que vivía en el edificio de la esquina, y que una noche había entrado por la ventana a su habitación; y como era mansito, no indagó de dónde era. Hasta que lo perjudicó. Entonces sí supo a dónde ir\ldots
 
 \chapter{Nuestra casa grande}
 Oigo repiquetear las campanas del templo que está a unos pasos; se debe a que es el día de Nuestra Señora del Carmen. Nos estamos cambiando de casa, nos vamos a donde está la clínica. Con la ayuda de unos amigos de nuestros hijos lo vamos a hacer en un solo día. Nuestros hijos ya son adolescentes, solo el menor es un niño de 10 años. 
@@ -551,7 +551,7 @@ Estando en tratamiento, y postrada en su cama, una noche se levantó a rasguñar
 Tuvo una rápida recuperación, pero le quedaron secuelas, como pasa casi siempre en los sobrevivientes a esta enfermedad; nuestra perra quedó afectada del corazón, pero aún así se desarrolló bien, y siempre fué alegre y participativa. En días de campo, o campamentos la perra siempre iba con nosotros, y se divertía acompañándonos en nuestros largos paseos por el campo.
 
 Su inteligencia le dictaba cosas que nadie le enseñó: Dejaba entrar a todas las personas, pero si querían tocar algo de las estanterías, ella se interponía, detrás de los mostradores, parada y ladrando. Ante este guardián formidable nadie se atrevía.
-Recuerdo muy bien como la menor de nuestras hijas y esta perra se comunicaban muy bien: Por ejemplo, me causaba mucha gracia que mi le preguntara;---``¿Quieres un plátano?''---, y la perra volteaba hacia donde estaba la fruta, y comenzaba a salivar hasta escurrirle\ldots
+Recuerdo muy bien como la menor de nuestras hijas y esta perra se comunicaban muy bien: Por ejemplo, me causaba mucha gracia que Susy le preguntara;---``¿Quieres un plátano?''---, y la perra volteaba hacia donde estaba la fruta, y comenzaba a salivar hasta escurrirle\ldots
 
 Con el menor de mis hijos aprendió que la mano derecha se llamaba ``la mano'', y la izquierda se llamaba ``la otra''. 
 
@@ -579,7 +579,7 @@ El doctor sugirió la incineración, a lo que todos aceptamos. Junto con ella se
 
 Cierto día llegaron a la clínica unas personas trayendo un loro lastimado, el cual cayó en su jardín. El doctor lo revisó, y vio que tenía un ala dislocada, lo vendó, y para que no se quitara la venda, le puso cinta adhesiva, muy resistente. 
 
-Al día siguiente regresaron las mismas personas, con el mismo loro, pero sin venda. Mi Gordo les preguntó qué había pasado, y le respondieron que entre le habían quitado la venda y la cinta; el doctor intrigado preguntó ---¿Como todos, quienes?---
+Al día siguiente regresaron las mismas personas, con el mismo loro, pero sin venda. Mi Gordo les preguntó qué había pasado, y le respondieron que entre todos le habían quitado la venda y la cinta; el doctor intrigado preguntó ---¿Como todos, quienes?---
 ¡Sus amigos!---¿Cuales?---¡Pues los de la parvada!---. Al entender la situación, pidió más detalles; ellos dijeron que estaban como 10 loros posados en la orilla de la azotea, habían bajado y lo habían liberado de la venda, y lo empujaban hacia arriba; él también lo intentaba, pero finalmente no lo consiguió. Tony, muy sorprendido por tanta solidaridad entre animales, les pidió a estas personas que lo mantuvieran informado, porque le interesaba mucho esta conducta. Volvió a vendar al loro, y esta vez le prometieron que lo encerrarían hasta que hubiera sanado, para luego liberarlo.
 
 Pero ocurre que estas personas no han vuelto, así que no supimos mas\ldots
@@ -644,7 +644,7 @@ Nosotros le decíamos que no había, que tenía que esperar hasta el verano.
 
 Pasaba casi diariamente, y en una ocasión le dijimos, a ver si así entendía, que hasta tiempo de lluvias, pero él continuaba pasando diariamente, ahora ya solo desde la puerta gritaba ---``¿Ya llegaron las tarántulas?''---, y nosotros con el dedo le decíamos que no. Pero un día cayó una lluvia ligera y breve, y al poco rato el muchacho llegó derrapando, y preguntando ---``¿Ahora sí ya llegaron?''---\ldots
 
-En cierta ocasión en que el médico escribía la receta para un perro enfermo, le indicaba al dueño como darle los medicamentos y le explicaba que con una jeringa era más fácil por que está graduada, y se puede medir la dosis, y además, si el perro no quiere abrir la boca, por un lado hay un hueco entre los dientes por el que se introducir el extremo de la jeringa.
+En cierta ocasión en que el médico escribía la receta para un perro enfermo, le indicaba al dueño como darle los medicamentos y le explicaba que con una jeringa era más fácil por que está graduada, y se puede medir la dosis, y además, si el perro no quiere abrir la boca, por un lado hay un hueco entre los dientes por el que se puede introducir el extremo de la jeringa.
 
 A los dos o tres días regresó el mismo señor, preguntando si no habría una mejor forma de darle las medicinas, por que así lo picaba mucho con LA AGUJA\ldots
 
@@ -677,9 +677,9 @@ La parte más difícil para un veterinario es tener que dormir a sus pacientes, 
 
 Una señora se presentó en la clínica preguntando cuanto le cobraría por sacrificarle tres gatos. El médico le preguntó por qué había tomado esa decisión, y la señora contestó que se habían vuelto agresivos, y que cada vez que pasaba, la rasguñaban o la mordían, y prácticamente ya se habían apropiado de la planta baja, teniendo ella que recluirse en el piso de arriba.
 
-No fué fácil para el médico aceptar este trabajo, pero por fin acordaron un precio. La señora pregunta: ---``¿Y si fueran cinco gatos?''---``Sería tanto''---``¿Y si fueran ocho?''---, a lo que el médico le pregunta: ---``Oiga, ¿es un juego?''---, a lo que ella responde ---``No doctor, es que no se cuantos son, tal vez sean quince''---. 
+No fué fácil para el veterinario aceptar este trabajo, pero por fin acordaron un precio. La señora pregunta: ---``¿Y si fueran cinco gatos?''---``Sería tanto''---``¿Y si fueran ocho?''---``Oiga, ¿es un juego?''---, a lo que ella responde ---``No doctor, es que no se cuantos son, tal vez sean quince''---. 
 
-Fijaron el día y la hora en que se presentaría el médico en el domicilio de la señora.
+Fijaron el día y la hora en que se presentaría el facultativo en el domicilio de la señora.
 
 El día acordado, el médico dispuso el equipamiento necesario, y le pidió ayuda a nuestro hijo mayor, porque calculaba (muy por debajo) lo que le esperaba. 
 
@@ -708,7 +708,7 @@ Al salir Tony a recibirlos, le preguntó inmediatamente si era suya la perra, a 
 
 De pronto, la perra, sin quitarle los ojos de encima, se levantó y mordió al doctor en un muslo, y regresó junto a su ama, la cual estaba sumamente apenada por este percance, y aseguraba que no tendría cara para volver, lo cual ha cumplido, y no sé si este incidente fué bastante elocuente para ella, y tampoco sé si conserva a la perra o no, el caso es que en el muslo de mi esposo todavía hay huella de la mordida y me pregunto, si la perra entendió lo que decía, o si captó más el tono de voz y la gesticulación, pero el doctor asegura que, basado en su experiencia, la perra entendió. ¡Claro que sí!.
 
-Teníamos una pareja de perritos \textit{chihuahua}; el machito llegó a nosotros de mes y medio, y después de un tiempo llegó la hembrita, de aproximadamente 1 año, muy maltratada y traumatizada emocionalmente. Se quedó con nosotros, porque su dueño pidió que se le sacrificara, ya que no quería gastar en vacunas, y sinceramente no le gustaban los perros. El médico le dijo que no podía hacer eso, que la perrita, a pesar de su estado, estaba muy joven, y su estado físico y emocional solo se debían al descuido, que solo necesitaba una atención adecuada y cariño. Por mi parte me alegró mucho, pues era muy bonita. Era blanca con manchas color champagne muy tenues, y cuando supe que necesitaba cariño, pensé que yo podía encargarme de eso. Era más esbelta que el machito, el cual tenía un hermoso color cobre, con el pecho, guantes y botas blancos. De inmediato congeniaron, pero se veía que ella dominaba, ya que comenzó a tomar la costumbre de sentarse sobre el, cuando el tomaba su siesta. 
+Teníamos una pareja de perritos \textit{chihuahua}; el machito llegó a nosotros de mes y medio, y después de un tiempo llegó la hembrita, de aproximadamente 1 año, muy maltratada y traumatizada emocionalmente. Se quedó con nosotros, porque su dueño pidió que se le sacrificara, ya que no quería gastar en vacunas, y sinceramente no le gustaban los perros. El médico le dijo que no podía hacer eso, que la perrita, a pesar de su estado, estaba muy joven, y su estado físico y emocional solo se debían al descuido, que solo necesitaba una atención adecuada y cariño. Por mi parte me alegró mucho, pues era muy bonita. Era blanca con manchas color champagne muy tenues, y cuando supe que necesitaba cariño, pensé que yo podía encargarme de eso. Era más esbelta que el machito, el cual tenía un hermoso color cobre, con el pecho, guantes y botas blancos. De inmediato congeniaron, pero se veía que ella dominaba, ya que comenzó a tomar la costumbre de sentársele encima, cuando el tomaba su siesta. 
 
 Le dimos mucha atención, pero ella siempre demostraba mucho miedo, y muy mal apetito. Probamos todos los aderezos apetitosos para perros, abre-apetitos y complementos alimenticios, pero no conseguimos terminar con este problema. 
 
@@ -747,10 +747,11 @@ Es septiembre de 1996 y estoy al cuidado de la tienda de animales y accesorios, 
 
 La adrenalina comienza a correr por micuerpo y quiero decir que no, pero le pregunto si lo desea mucho, él contesta que sí. Pienso que no tengo derecho a privarlo de esta experiencia, y cerrando los ojos acepto. Será la primera vez que competimos.
 
-Viene por mí, y al llegar al Centro de Convenciones, veo la cantidad de personas que están esperando el concurso. Vuelvo a sentir terror y le pregunto que qué le hace creer que podemos tener alguna oportunidad; que no por el hecho de que toda nuestra vida nos ha gustado el baile, quiere decir algo mas, fin, mi terror aumenta al ir a inscribirnos, y veo que todas las parejas son jóvenes, nosotros somos los únicos abuelos. Mi esposo procura tranquilizarme, diciéndome que va a estar muy fácil, que se trata de baile de salón. ¡Que horror!. El templete donde bailaremos está como a metro y medio de altura; nos dicen que ya tenemos nuestro lugar, y no me queda más que poner buena cara y sonreír. 
+Viene por mí, y al llegar al Centro de Convenciones, veo la cantidad de personas que están esperando el concurso. Vuelvo a sentir terror y le pregunto que qué le hace creer que podemos tener alguna oportunidad; que no por el hecho de que toda nuestra vida nos ha gustado el baile, quiere decir algo mas, en fin, mi terror aumenta al ir a inscribirnos, y veo que todas las parejas son jóvenes, nosotros somos los únicos abuelos. Mi esposo procura tranquilizarme, diciéndome que va a estar muy fácil, que se trata de baile de salón. ¡Que horror!. El templete donde bailaremos está como a metro y medio de altura; nos dicen que ya tenemos nuestro lugar, y no me queda más que poner buena cara y sonreír. 
 
 Ignoro a las 3000 personas que están alrededor, y al empezar la música comienzo a disfrutar como pez en el agua. Van eliminando parejas, y nosotros continuamos. Cuando quedamos seis parejas nos indican que salgamos, lo cual hacemos, pero el público comienza a gritar, protestando:---``¡Ellos no, ellos no!. ¡Voto por voto, casilla por casilla!''--- Y nos regresan. Al final quedamos en 3er lugar, nos vencieron con ``reaggeton''. El premio es un aparato de DVD cada uno, y al llegar a casa, nuestros hijos ya están enterados y nos felicitan. El yerno mayor nos pregunta que vamos a hacer con esos aparatos, contestamos que no sabemos, agregamos que el nuestro está casi nuevo. Él nos da 2000 pesos por cada uno diciendo que ya tiene a quien vendérselos. Me siento muy satisfecha porque después del pánico gané algo de dinero; mi esposo me dice tiernamente que confíe más en mí. Ha sido una emoción tan fuerte, que me impide dormir pronto.
 
+\section*{\centering * * *}
 Me he inscrito en natación; me aterroriza cuando el agua me cubre la cara, y creo que sabiendo nadar voy a poder controlar ese miedo, además he leído que es un deporte muy completo.
 
 Ya han pasado tres meses y todavía no se nadar, no se ocupan de mí, lo poco que he logrado ha sido por mi cuenta, observando las indicaciones que dan a otras mujeres.
@@ -763,17 +764,17 @@ Ya ha pasado un año, nuestros esfuerzos y tenacidad están dando sus frutos, pu
 
 ¡Otra vez, más adrenalina!: Quiere Maru que participemos en una competencia.
 
-Tony se ha safado, diciendo que debe atender su trabajo, y a mí no me queda más que aceptar, pues nos ha dicho ella que le exigen determinado número de personas. ¡Ay, no! A mí no me gustan las competencias, me estreso mucho y no me gusta sentirme así. Me gusta mucho nadar a mi ritmo y sin presiones.
+Tony se ha zafado, diciendo que debe atender su trabajo, y a mí no me queda más que aceptar, pues nos ha dicho ella que le exigen determinado número de personas. ¡Ay, no! A mí no me gustan las competencias, me estreso mucho y no me gusta sentirme así. Me gusta mucho nadar a mi ritmo y sin presiones.
 
 Es sábado, día de la competencia. ¡Que horror! La gradería está llena y yo no quiero participar en esto. 
 
 ¡No lo puedo creer! Después de haber aprendido a respirar, me toca mi turno, y un entrenador me va vigilando con un cronómetro, estoy tan nerviosa que casi me ahogo, pienso que ya perdí y en cuanto termino me salgo y me escurro hacia los baños, ya no quiero saber nada. Me estoy vistiendo y escucho que me llaman por el altavoz, yo  sonrío para mí misma y pienso: ---``Que vayan mucho\ldots''---.  Ya vestida, me cuelo hacia el coche y me voy a mi casa. Cuando regrese, pues a ver que invento.
 
-Regreso el lunes, y para mi sorpresa, Maru me entrega una medalla, (``dizque me la gané''), preguntando qué había pasado conmigo, a lo que contesté que me sentía mal, que se me dificulta mucho la respiración, que el ``estress''\ldots.
+Regreso el lunes, y para mi sorpresa, Maru me entrega una medalla, (``dizque me la gané''), preguntando qué había pasado conmigo, a lo que contesté que me sentía mal, que se me dificultaba mucho la respiración, que el ``estress''\ldots.
 
 Ahora que ya estamos casi solos me puedo dedicar más tiempo para mí misma, y como nos gusta viajar, pues ya podemos hacerlo más, pues ya no tenemos colegiaturas ni otros gastos. Disfrutamos de nuestra compañía mutua.
 
-Me veo en el espejo y observo cuanto deterioro ha dejado el paso del tiempo, observo como ha ido cambiando nuestro cuerpo, el cabello de Tony ahora es platinado, pero a mí me sigue pareciendo muy guapo y atractivo.
+Me veo en el espejo y observo cuanto deterioro ha dejado el paso del tiempo, como ha ido cambiando nuestro cuerpo, el cabello de Tony ahora es platinado, pero a mí me sigue pareciendo muy guapo y atractivo.
 
 Yo, a pesar de mi edad, no me siento vieja, gozo de buena salud, y tengo más equilibrio en mi vida emocional, quiero decir que he aprendido a vivir en paz, esto hace que mi vida sea muy agradable; la convivencia con Tony hace que me sienta bonita, valiosa y muy amada.
 
@@ -818,17 +819,17 @@ Vamos a México con los gastos pagados y con todo el vestuario, y al llegar a in
 
 No me siento cómoda, no me gusta estar en este lugar y no quiero repetir esta experiencia, ya hablé con Tony desde León, y prometió que no me lo volvería a pedir. 
 
-A pesar de mi malestar hemos quedado en 1er.\ lugar en Rock `n roll, 2º en Mambo y 4º en Danzón (este ya no cuenta, solo los tres primeros), así que cada uno llevamos dos medallas y un trofeo. Tony les avisó a varios amigos que tenemos en México y nos fueron a ver; escuché sus vítores y pude sentir su apoyo. Al concluir el evento nos dirigimos al hotel que teníamos ya pagado, pero al estar cenando decidimos regresar a León en seguida y así lo hicimos, y al llegar acá, nos enteramos que la noticia ya había circulado en los periódicos vespertinos, por lo que al día siguiente tuvimos muchas llamadas para felicitarnos.
+A pesar de mi malestar hemos quedado en 1er.\ lugar en Rock `n roll, 2º en Mambo y 4º en Danzón (este ya no cuenta, solo los tres primeros), así que cada uno llevamos dos medallas y un trofeo. Tony les avisó a varios amigos que tenemos en México y nos fueron a ver; escuché sus vítores y pude sentir su apoyo. Al concluir el evento nos dirigimos al hotel que teníamos reservado, pero al estar cenando decidimos regresar a León en seguida y así lo hicimos, y al llegar acá, nos enteramos que la noticia ya había circulado en los periódicos vespertinos, por lo que al día siguiente tuvimos muchas llamadas para felicitarnos.
 
-Pocos días después el periódico el Sol de León nos pidió una entrevista, dedicándonos una plana con varias foto y una reseña.
-Nuestra vida está llena de emociones muy fuertes que a mi me parece mucha y Tony dice que quiere más.
+Pocos días después el periódico el Sol de León nos pidió una entrevista, dedicándonos una plana con varias fotos y una reseña.
+Nuestra vida está llena de emociones muy fuertes, que a mi me parecen demasiadas, y Tony dice que quiere más.
 
 Actualmente, quizás por la edad, quizás por razones de horario, nos hemos acomodado en el DIF, que está a 3 cuadras de nuestra casa. La atracción primera fué que tiene dos áreas para ejercicios físicos y además es un recinto arbolado muy bonito que se encuentra en el conocido Jardín de San Juan de Dios. Después hemos ido decubriendo que imparten talleres interesantes. Nos gusta participar en las fiestas que aquí se organizan, dizfrazandonos de acuerdo al evento, participar en concursos de trajes típicos, concursos de baile, etc.
 Hoy en día formamos parte del taller de teatro, y ya estrenamos nuestra primera obra, también estamos en el coro, el circulo de lectura y mas.
 
 Por el momento ahí estamos plantados, al mismo tiempo atendemos la clínica, aunque ya no tenemos tienda de animales, la clínica funciona muy bien, mi esposo se siente afortunado de poder hacer lo que más le gusta, y ademas le pagan.
 
-Me gusta lo que me ofrece la vida en esta etapa, más tiempo para mí y como pareja. Puedo leer mucho, escribir, viajar y hacer casi todo lo que me gusta. También seguimos participando de muchos concursos de baile: ¡Pos' ¿no que no?!
+Me gusta lo que me ofrece la vida en esta etapa, más tiempo para mí y como pareja. Puedo leer mucho, escribir, viajar y hacer casi todo lo que me gusta. También seguimos participando en muchos concursos de baile: ¡Pos' ¿no que no?!
 
 ¡Que felicidad, ya tenemos nuestra primera bisnieta!
 
