--- a/Anecdotario.tex
+++ b/Anecdotario.tex
@@ -28,11 +28,11 @@ Además de la vocación, mi esposo heredó relojes de pared, radios, lámparas e
 
 Estudié la primaria y la secundaria en colegios particulares, siendo muy rígidos, igual que mis papás (Agradezco la vida y todo lo que me han dado), pero me muero por tratar y platicar con muchachos, con naturalidad, sin que esté prohibido. Es por eso que me encuentro muy agitada emocionalmente, y los últimos meses, no he podido casi dormir, por estar esperando esta nueva libertad. Pero me cuido mucho de esconder lo qwe siento, no vaya a ser que a mis papás les parezca peligroso, y no me permitan estudiar en esta escuela.
 
-Mi papá no quiere que estudiemos una carrera corta, aquí en León solo hay Medicina y Contador Público. He elegido Medicina, aunque no tengo intención de estudiar en serio, sólo quiero un pretexto para salir de mi casa, por que ahí encerrada no voy a conocer a nadie.
+Mi papá no quiere que estudiemos una carrera corta; aquí en León solo hay Medicina y Contador Público. He elegido Medicina, aunque no tengo intención de estudiar en serio, sólo quiero un pretexto para salir de mi casa, por que ahí encerrada no voy a conocer a nadie.
 
 Estoy soportando el frío aquí en el corredor del segundo piso, junto a la puerta del salón de Química. Como llegué un poco tarde la puerta ya está cerrada, y no me atrevo a pedir permiso para entrar, soy muy tímida y no soporto las miradas en mí, estoy deseando que llegue alguna compañera, para entrar juntas; la maestra no nos negará la entrada, se llama Arcelia Chávez Fonseca, y es madrina de una de mis hermanas menores.
 
-Las clases comenzaron en enero, porqwe están recorriendo el calendario escolar, pues quieren que comiencen en agosto, y no en febrero, como ha sido toda mi vida, ¡Que raro!.
+Las clases comenzaron en enero, porque están recorriendo el calendario escolar, pues quieren que comiencen en agosto, y no en febrero, como ha sido toda mi vida, ¡Que raro!.
 
 Estoy aquí de pie, con un libro abierto, para disimular que me siento sola y tonta. Este libro lo muevo a mi antojo para ver quién pasa.
  
@@ -500,7 +500,7 @@ Sucedió que un día mi hijo traía en la mano una tarántula \textit{brachiophe
 
 Estas tarántulas, sin ser agresivas para el humano, si impresionan, pues tienen el tamaño de una mano grande, son negras con rayas amarillas en las patas. Cuando se sienten amenazadas desprenden unos pelillos urticantes.
 
-Nuestra vecina, que primero nos rentó y luego nos vendió la casa, había dividido esta casi a la entrada con un bastidor de madera, quedando muchos resquicios. Así dividida la  casa, ella se quedaba con la parte chica, y nosotros con la grande.
+Nuestra vecina, que primero nos rentó y luego nos vendió la casa, había dividido ésta casi a la entrada con un bastidor de madera, quedando muchos resquicios. Así dividida la  casa, ella se quedaba con la parte chica, y nosotros con la grande.
 
 Yo calculo que nuestro hijo más chico anduvo jugando, abriendo las puertas de las jaulas, y seguramente dejó abiertas algunas. Cuando regresamos al día siguiente, habían desaparecido todas las víboras, las tarántulas y dos ardillas.Apenas habíamos entrado, cuando sonó el teléfono, era la señora de al otro lado, muerta de miedo, que nos pedía que sacáramos todos esos animales de su casa, que ya había telefoneado a su esposo para que viniera de su trabajo a abrirnos; ella no podía hacerlo, porque estaba sentada en lo alto de la cabecera de su cama. Al llegar el marido, y verla tan asustada, nos dijo que si volvía a suceder, nos demandaría. Al parecer fueron atrapados todos los animales, pero las ardillas no aparecían. La señora ya estaba muy tranquila, platicando amenamente  por teléfono con una amiga. Cuando descubrimos nosotros que por la hendidura que tenía el cancel de madera se habían pasado las ardillas, y podíamos ver su cola, de inmediato fué mi Gordo con una red para atraparlas, y antes de tocar, pudo ver a la señora hablando por teléfono y descubriendo en ese momento también a las ardillas, y gritándole a su amiga ---``¡¡Esos animales me están viendo!!''--- y entre grito y grito, se lanzó una de las ardillas directo a su cara, la señora gritaba y corría y mi Gordo impotente, viéndolo todo, pero con la puerta cerrada. A través de la ventana le rogaba el que se tranquilizara y que abriera. Cuando al fin pudo hacerlo, Tony atrapó a las dos ardillas, y no hallaba palabras para disculparse. De verdad que nos apenó mucho, y sentíamos mucha vergüenza, de haber causado tanto tormento a la pobre señora. Pero también  es cierto que nos reímos mucho, y aún seguimos haciéndolo.
 
@@ -514,7 +514,7 @@ En otra ocasión fué un zorrillo el que llegó y se quedó igual que el animal 
 
 Mi hijo se bañaba y restregaba, pero no lograba hacer desaparecer el olor; todavía no sabíamos que para estos casos es muy útil la salsa catsup.Igual que con los otros animales, tuvimos que llevarlo al campo, pero muy bien tapado y evitando que se asustara y soltara su líquido. 
 
-Otro día el que llegó fué un mapache; era muy divertido verlo comer, porque estos animalitos acostumbran lavar su comida, la restregan y enjuagan varias veces usando sus dos manitas. A este animalito lo dejábamos libre por las noches. Por ese entonce teníamos a la venta cachorros de antiguo pastor ingles, y para cuando llegó el mapache, ya solo quedaba uno.
+Otro día el que llegó fué un mapache; era muy divertido verlo comer, porque estos animalitos acostumbran lavar su comida, la restregan y enjuagan varias veces usando sus dos manitas. A este animalito lo dejábamos libre por las noches. Por ese entonces teníamos a la venta cachorros de antiguo pastor ingles, y para cuando llegó el mapache, ya solo quedaba uno.
 
 Una noche oímos que gritaba el perrito, pero dimos por hecho que jugaban, hasta el día siguiente nos dimos cuenta que le faltaba un dedo de una patita. El mapache se lo había arrancado y lo tuvimos que llevar a su lugar de origen.
 
@@ -531,7 +531,7 @@ Cuando llegó por fin este monito, mientras lo recogían estaba en su jaula, jug
 Cuando por fin vino su dueña por el, y se lo llevó a su local, los niños que salían de la escuela y se detenían a verlo, estaban encantados con el monito. La dueña de la zapatería ofreció un premio para el que propusiera el mejor nombre, y fijó un día para este fin.
 Este día en que se llevó a cabo el concurso se llenó la zapatería, ganando el niño que propuso que el changuito se llamara ``King-King''.  Este monito no vivió mucho tiempo, precisamente por tantos niños, que le daban todo tipo de golosinas; al no tener una alimentación adecuada, se fué debilitando poco a poco, hasta que enfermó y murió sin recibir atención médica.
 
-Un tiempo después compró Tony un mono \textit{zarahuato}, que se portaba muy tranquilo. Llegó un taxista, a quien le gustó, y lo compró, ya que quería ser la atracción entre los de su gremio. No pasó una semana, cuando regresó todo batido de diarrea de mono; se presemtaba a  regresar al chango, diciendo que así como estaba él, así le había dejado el taxi, y no quería más de estos suscesos, aunque no se distinguiera de los demás compañeros.
+Un tiempo después compró Tony un mono \textit{zarahuato}, que se portaba muy tranquilo. Llegó un taxista, a quien le gustó, y lo compró, ya que quería ser la atracción entre los de su gremio. No pasó una semana, cuando regresó todo batido de diarrea de mono; se presentaba a  regresar al chango, diciendo que así como estaba él, así le había dejado el taxi, y no quería más de estos susesos, aunque no se distinguiera de los demás compañeros.
 \chapter{Inteligencia animal}
 La clínica veterinaria de mi Gordo no estaba en un local, sino en una casa grande de la zona centro, así que con la clínica, y tantos animales, sólo se ocupaba la mitad de esta casa, y ya empezábamos a cansarnos de ir a nuestra casa a comer, y regresar de prisa por que ya nos estaban esperando.
 De manera que después de pensarlo, decidimos hacer algunas reparaciones e irnos a vivir a la casa del centro, extendiéndonos para ocupar la parte mayor restante.
@@ -695,7 +695,7 @@ Era una lucha a muerte; la adrenalina de ambos lados llegó a niveles muy altos,
 
 Además, a este horror, se le sumaba la presencia de miembros muy jovenes, tanto que todavía no terminaba su desarrollo, y dolorosamente, también había hembras preñadas.
 
-Esto ya no era cuestión de cumplir con un trato, sino de la seguridad de la señora, qwe ya era mayor y además vivía sola. No hubiera sido la primera vez que los gatos terminaran devorando a su propietaria.
+Esto ya no era cuestión de cumplir con un trato, sino de la seguridad de la señora, que ya era mayor y además vivía sola. No hubiera sido la primera vez que los gatos terminaran devorando a su propietaria.
 
 Sintiéndose hastiados de muerte, los valientes hombres iban acumulando los cadáveres, que llegaron a 28, con los músculos entumecidos, buscaban con pavor si había mas. Solamente uno logró escapar, colándose por un pequeño orificio, y al salir en su persecución a la calle, ya tan solo lo alcanzaron a ver a lo lejos, la cola tensa como una antena, y la velocidad que llevaba les hacia pensar que no iba a detenerse nunca\ldots
 
