--- a/Anecdotario.tex
+++ b/Anecdotario.tex
@@ -26,7 +26,7 @@ Además de la vocación, mi esposo heredó relojes de pared, radios, lámparas e
 \section*{\centering * * *}
 ¡Bbrrhh! ¡Que frío hace, y no deja de llover ni de día ni de noche. Es enero de 1967, y por fin estoy en la escuela preparatoria de León (``E.P.L.''). Digo por fin, por que se acostumbra en mi familia, que los pasos de las hermanas mayores los sigan las menores.
 
-Estudié la primaria y la secundaria en colegios particulares, siendo muy rígidos, igual que mis papás (Agradezco la vida y todo lo que me han dado), pero me muero por tratar y platicar con muchachos, con naturalidad, sin que esté prohibido. Es por eso que me encuentro muy agitada emocionalmente, y los últimos meses, no he podido casi dormir, por estar esperando esta nueva libertad. Pero me cuido mucho de esconder lo qwe siento, no vaya a ser que a mis papás les parezca peligroso, y no me permitan estudiar en esta escuela.
+Estudié la primaria y la secundaria en colegios particulares, siendo muy rígidos, igual que mis papás (Agradezco la vida y todo lo que me han dado), pero me muero por tratar y platicar con muchachos, con naturalidad, sin que esté prohibido. Es por eso que me encuentro muy agitada emocionalmente, y los últimos meses, no he podido casi dormir, por estar esperando esta nueva libertad. Pero me cuido mucho de esconder lo que siento, no vaya a ser que a mis papás les parezca peligroso, y no me permitan estudiar en esta escuela.
 
 Mi papá no quiere que estudiemos una carrera corta; aquí en León solo hay Medicina y Contador Público. He elegido Medicina, aunque no tengo intención de estudiar en serio, sólo quiero un pretexto para salir de mi casa, por que ahí encerrada no voy a conocer a nadie.
 
